# daily-job-digest

./: .env  .gitignore  Dockerfile.dockerfile  README.md  daily_job_digest.py  debug.py  job_listings.csv  main.py  pyproject.toml  render.yaml  requirements.txt  test.py
.github/workflows/: daily-job.yml
